similar movies and recommendation added

--- a/movieDetail.html
+++ b/movieDetail.html
@@ -99,7 +99,7 @@
                 </section>
                 <section class="section_story">
                 </section>
-                <section class=" Now_playing_movies_container Now_playing_movies_container_movieDetail">
+                <section class=" Now_playing_movies_container Now_playing_movies_container_movieDetail" id="nowplayin">
                     <h4 class="Now_playing_movies_container_title">Now playing movies</h4>
 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -113,6 +113,42 @@
                             d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
                     </svg>
                     <div class="Now_playing_movies_div Now_playing_movies_div_movieDetail">
+                    </div>
+                </section>
+                <section
+                    class=" Now_playing_movies_container Now_playing_movies_container_movieDetail similar_movies_container"
+                    id="Similarovie">
+                    <h4 class="Now_playing_movies_container_title">Similar Movies</h4>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="rightarrow arrowbtn bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <div class="Now_playing_movies_div Now_playing_movies_div_movieDetail Similar_movies_div">
+                    </div>
+                </section>
+                <section
+                    class=" Now_playing_movies_container Now_playing_movies_container_movieDetail reccomendation movie"
+                    id="recommenn">
+                    <h4 class="Now_playing_movies_container_title">Recommendation</h4>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="rightarrow arrowbtn bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <div class="Now_playing_movies_div Now_playing_movies_div_movieDetail recommendation_movies_div">
                     </div>
                 </section>
             </section>
