caste credits added

--- a/movieDetail.html
+++ b/movieDetail.html
@@ -99,6 +99,22 @@
                 </section>
                 <section class="section_story">
                 </section>
+                <section class=" Now_playing_movies_container Now_playing_movies_container_movieDetail" id="cast_con">
+                    <h4 class="Now_playing_movies_container_title">Cast</h4>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="rightarrow arrowbtn bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <div class="Casdiv">
+                    </div>
+                </section>
                 <section class=" Now_playing_movies_container Now_playing_movies_container_movieDetail" id="nowplayin">
                     <h4 class="Now_playing_movies_container_title">Now playing movies</h4>
 
