width issue fixed

--- a/personDetail.html
+++ b/personDetail.html
@@ -89,7 +89,7 @@
                     <div class="light_darkmode"></div>
                 </nav>
             </div>
-            <section class="section_two">
+            <section class="section_twoo">
                 <div class="personDetail_container">
                     <div class="profile_picture_container">
 
