--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <span class="movie_name title_span">Movies</span></a>
                         </li>
                         <li class="tv_shows">
-                            <a class="sidenavlinks" href="#">
+                            <a class="sidenavlinks" href="./tvShows.html">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                                     class="bi bi-tv-fill" viewBox="0 0 16 16">
                                     <path class="path"
