--- a/tvShows.html
+++ b/tvShows.html
@@ -90,92 +90,39 @@
                 </nav>
             </div>
             <section class="section_two section_two2">
-                <div class="posterbig"></div>
-                <div class="poster_big">
-                    <div class="gradient"></div>
-                    <div class="line"></div>
-                </div>
-                <section class="movie_details">
-                </section>
-                <section class="section_story">
-                </section>
-                <section class=" Now_playing_movies_container Now_playing_movies_container_movieDetail" id="cast_con">
-                    <h4 class="Now_playing_movies_container_title">Cast</h4>
+                <section class="Now_playing_movies_container_search">
+                    <h4 class="Now_playing_movies_container_title tvshowheader" id="search_header">TV Shows</h4>
 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
+                        class="leftarrow arrowsearch arrowbtn bi-chevron-left" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
                             d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
                     </svg>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="rightarrow arrowbtn bi-chevron-right" viewBox="0 0 16 16">
+                        class="rightarrow  arrowsearch  arrowbtn bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
                             d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
                     </svg>
-                    <div class="Casdiv">
+                    <div class="tvshowcategory_container">
+                        <ul class="tvshowcatrgory_ul">
+                            <li>Airing Today</li>
+                            <li>On The Air</li>
+                            <li>Popular</li>
+                            <li>Top Rated</li>
+                        </ul>
                     </div>
-                </section>
-                <section class=" Now_playing_movies_container Now_playing_movies_container_movieDetail" id="nowplayin">
-                    <h4 class="Now_playing_movies_container_title">Now playing movies</h4>
+                    <div class="search_result_div">
 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="rightarrow arrowbtn bi-chevron-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-                    </svg>
-                    <div class="Now_playing_movies_div Now_playing_movies_div_movieDetail">
                     </div>
-                </section>
-                <section
-                    class=" Now_playing_movies_container Now_playing_movies_container_movieDetail similar_movies_container"
-                    id="Similarovie">
-                    <h4 class="Now_playing_movies_container_title">Similar Movies</h4>
-
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="rightarrow arrowbtn bi-chevron-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-                    </svg>
-                    <div class="Now_playing_movies_div Now_playing_movies_div_movieDetail Similar_movies_div">
-                    </div>
-                </section>
-                <section
-                    class=" Now_playing_movies_container Now_playing_movies_container_movieDetail reccomendation movie"
-                    id="recommenn">
-                    <h4 class="Now_playing_movies_container_title">Recommendation</h4>
-
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="rightarrow arrowbtn bi-chevron-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-                    </svg>
-                    <div class="Now_playing_movies_div Now_playing_movies_div_movieDetail recommendation_movies_div">
                     </div>
                 </section>
             </section>
         </section>
-
     </main>
     <div class="attribution">
         Coded by <a href="https://github.com/immdipu">Dipu Chaurasiya</a>.
     </div>
-
-    <script src="./movieDetails.js"></script>
+    <script src="./tvshows.js"></script>
 </body>
 
 </html>
