--- a/tvShows.html
+++ b/tvShows.html
@@ -115,6 +115,14 @@
 
                     </div>
                     </div>
+                    <div class="pagination_container">
+                        <div class="pagination">
+                            <button class="previous_btn paginationBtn">previous</button>
+                            <span class="pageCount"></span>
+                            <button class="Next_btn paginationBtn">Next</button>
+                        </div>
+
+                    </div>
                 </section>
             </section>
         </section>
