seach include tv shows

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 <body class="body">
     <main class="main">
         <section class="alertMsg">
-            <h2 class="alertMsg_header">Seach is working now!!</h2>
-            <p class="alertMsg_para">More updates coming soon !!! <br> stay tuned Thank You!😊</p>
+            <h2 class="alertMsg_header">TV shows added</h2>
+            <p class="alertMsg_para">Search now includes movies and tv shows.
+                More updates coming soon !!! <br> stay tuned Thank You!😊</p>
             <button class="okaybtn">Okay</button>
         </section>
         <div class="overlay"></div>
