empty search msg updated

--- a/search.html
+++ b/search.html
@@ -105,7 +105,7 @@
                     </svg>
                     <div class="search_result_div ">
                         <div class="emptysearch">
-                            <h3>Type movie name to start searching...</h3>
+                            <h3>Type query to start search..</h3>
                         </div>
                     </div>
                 </section>
