movies genre added

--- a/moviesGenre.html
+++ b/moviesGenre.html
@@ -89,41 +89,45 @@
                     <div class="light_darkmode"></div>
                 </nav>
             </div>
-            <section class="section_twoo">
-                <div class="personDetail_container">
-                    <div class="profile_picture_container">
+            <section class="section_two section_two2">
+                <section class="Now_playing_movies_container_search">
+                    <h4 class="Now_playing_movies_container_title tvshowheader" id="search_header">Movies</h4>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="leftarrow arrowsearch arrowbtn bi-chevron-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="rightarrow  arrowsearch  arrowbtn bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <div class="tvshowcategory_container">
+                        <ul class="tvshowcatrgory_ul movies_category_ul">
+
+                        </ul>
+                    </div>
+                    <div class="search_result_div">
 
                     </div>
-                    <div class="about_Text">
-                        <h2 class="person_name"></h2>
-                        <div class="biography_container">
-                            <h3 class="biography_header">Biography</h3>
-                            <p class="biography">.</p>
-                        </div>
                     </div>
-                </div>
-            </section>
-            <section class="section_three">
-                <h2 class="personal_information">Personal information</h2>
-                <div class="birth_place_container">
-                    <h3 class="pi_header">Birth Place</h3>
-                    <p class="birth_place"> </p>
-                </div>
-                <div class="DoB_contanier">
-                    <h3 class="pi_header">Birthday</h3>
-                    <p class="DoB"></p>
-                </div>
-                <h3 class="pi_header">Filmography :</h3>
+                    <div class="pagination_container">
+                        <div class="pagination">
+                            <button class="previous_btn paginationBtn">previous</button>
+                            <span class="pageCount"></span>
+                            <button class="Next_btn paginationBtn">Next</button>
+                        </div>
+
+                    </div>
+                </section>
             </section>
         </section>
     </main>
-
-    <div class="search_result_div person_movie_con"></div>
     <div class="attribution">
         Coded by <a href="https://github.com/immdipu">Dipu Chaurasiya</a>.
     </div>
-
-    <script src="./personaldetail.js"></script>
+    <script src="./moviesGenre.js"></script>
 </body>
 
 </html>
