--- a/SeasonEpisode.html
+++ b/SeasonEpisode.html
@@ -47,7 +47,7 @@
                                     </svg><span class="Home_title title_span">Home</span></a>
                             </li>
                             <li class="movie">
-                                <a class="sidenavlinks" href="#">
+                                <a class="sidenavlinks" href="./moviesGenre.html">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                                         class="bi bi-play-fill" viewBox="0 0 16 16">
                                         <path class="path"
@@ -90,10 +90,14 @@
                 </nav>
             </div>
             <section class="section_two section_two2">
+
                 <section class="Now_playing_movies_container_search">
                     <h4 class="Now_playing_movies_container_title titleoftvshow"></h4>
                 </section>
-
+                <section class="msg_episode_container">
+                    <div class="msg_episode">If the episodes list are in random order. Click on the current season
+                        number twice</div>
+                </section>
                 <section class="number_of_seasons">
 
                 </section>
@@ -102,7 +106,6 @@
                 </section>
                 <section class="Episodes_container">
                     <!-- <div class="epishodes_card"> 
-
                         <a href=""><img class="episode_image"
                                 src="https://image.tmdb.org/t/p/original/83vFYTHtCqWwaDtZluSU8bmnFYG.jpg" alt="">
                             <span class="runtime">61:00</span>
@@ -120,7 +123,6 @@
                                 be the same again.</p>
                         </div>
                     </div>-->
-
                 </section>
             </section>
         </section>
