--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
 <body class="body">
     <main class="main">
-        <section class="alertMsg">
+        <!-- <section class="alertMsg">
             <h2 class="alertMsg_header">TV shows added</h2>
             <p class="alertMsg_para">Search now includes movies and tv shows.
                 More updates coming soon !!! <br> stay tuned Thank You!😊</p>
             <button class="okaybtn">Okay</button>
-        </section>
+        </section>-->
         <div class="overlay"></div>
         <div class="overlay_side_navabar"></div>
         <div class="sidenav_container">
@@ -63,13 +63,13 @@
                                 <span class="movie_name title_span">Movies</span></a>
                         </li>
                         <li class="tv_shows">
-                            <a class="sidenavlinks" href="./tvShows.html">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-                                    class="bi bi-tv-fill" viewBox="0 0 16 16">
-                                    <path class="path"
-                                        d="M2.5 13.5A.5.5 0 0 1 3 13h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zM2 2h12s2 0 2 2v6s0 2-2 2H2s-2 0-2-2V4s0-2 2-2z" />
-                                </svg>
-                                <span class="tv_shows_title title_span">shows</span></a>
+                            <a class="sidenavlinks" href="./tvShows.html"></a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                class="bi bi-tv-fill" viewBox="0 0 16 16">
+                                <path class="path"
+                                    d="M2.5 13.5A.5.5 0 0 1 3 13h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zM2 2h12s2 0 2 2v6s0 2-2 2H2s-2 0-2-2V4s0-2 2-2z" />
+                            </svg>
+                            <span class="tv_shows_title title_span">shows</span></a>
                         </li>
                         <li class="settings">
                             <a class="sidenavlinks" href="./About.html">
