Correction of about texts

--- a/About.html
+++ b/About.html
@@ -105,7 +105,7 @@
                                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
                                 </svg></span>
                         </div>
-                        <blockquote>Just like everyother website, this website is also a streaming site that helps to
+                        <blockquote>Just like every other website, this website is also a streaming site that helps to
                             easily access
                             all the TV shows and movies we wanted, without spending hours searching for them.
                         </blockquote>
@@ -138,11 +138,9 @@
                                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
                                 </svg></span>
                         </div>
-                        <blockquote> We are very sorry that we cant help you with that. We have no control in the ads
-                            being
-                            serve. Don't download anything in the popups. If you don't want to be annoyed. We highly
-                            recommended to subscribe in legal streaming site that you can
-                            afford.
+                        <blockquote>We are very sorry that we can't help you with that. We have no control in the ads
+                            being served. Don't download anything in the popups. If you don't want to be annoyed. We
+                            highly recommend subscribing to a legal streaming service that you can afford.
                         </blockquote>
                     </div>
 
@@ -155,11 +153,11 @@
                                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
                                 </svg></span>
                         </div>
-                        <blockquote> When you go on the page with the episode, in 99% of the cases there is a video
+                        <blockquote>When you go on the page with the episode, in 99% of the cases there is a video
                             player. What you have to do is click the Play button, of course. If it does not work (Don’t
                             be judgmental! Everybody makes mistakes!), just click on the Servers you see on the top left
-                            of your device. You will get a list of servers [Vidcloud, Hydrax etc] Try choosing different
-                            server it will definitely solve the problem.
+                            of your device. You will get a list of servers [Vidcloud, Hydrax etc.] Try choosing
+                            different server, it will definitely solve the problem.
                         </blockquote>
                     </div>
                     <div class="card">
@@ -170,10 +168,9 @@
                                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
                                 </svg></span>
                         </div>
-                        <blockquote>Since we don't store any files so we don't have any download feature here. All
+                        <blockquote>Since we don't store any files, so we don't have any download feature here. All
                             files found on this site have been collected from various sources across the web and are
-                            believed to be
-                            in the “public domain
+                            believed to be in the public domain.
                         </blockquote>
                     </div>
                     <div class="card">
@@ -184,10 +181,9 @@
                                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
                                 </svg></span>
                         </div>
-                        <blockquote>This website is undoubltly safer to stream however downloading, uploading is
-                            illegal. You will not get into any trouble while using our website. It's
-                            highly not recommended to download the files and share them to public, It might get you in
-                            trouble.
+                        <blockquote>This website is undoubtedly safer to stream, however downloading, uploading is
+                            illegal. You will not get into any trouble while using our website. It's highly not
+                            recommended to download the files and share them to the public, It might get you in trouble.
                         </blockquote>
                     </div>
                 </section>
