--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                     <path class="path"
                                         d="M2.5 13.5A.5.5 0 0 1 3 13h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zM2 2h12s2 0 2 2v6s0 2-2 2H2s-2 0-2-2V4s0-2 2-2z" />
                                 </svg>
-                                <span class="tv_shows_title title_span">shows</span></a>
+                                <span class="tv_shows_title title_span">Shows</span></a>
                         </li>
                         <li class="settings">
                             <a class="sidenavlinks" href="./About.html">
