--- a/search.html
+++ b/search.html
@@ -47,7 +47,7 @@
                                     </svg><span class="Home_title title_span">Home</span></a>
                             </li>
                             <li class="movie">
-                                <a class="sidenavlinks" href="./movieDetail.html">
+                                <a class="sidenavlinks" href="./moviesGenre.html">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                                         class="bi bi-play-fill" viewBox="0 0 16 16">
                                         <path class="path"
