page font updated

--- a/moviesGenre.html
+++ b/moviesGenre.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -114,7 +115,7 @@
                     </div>
                     <div class="pagination_container">
                         <div class="pagination">
-                            <button class="previous_btn paginationBtn">previous</button>
+                            <button class="previous_btn paginationBtn">Previous</button>
                             <span class="pageCount"></span>
                             <button class="Next_btn paginationBtn">Next</button>
                         </div>
