--- a/tvShows.html
+++ b/tvShows.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="pagination_container">
                         <div class="pagination">
-                            <button class="previous_btn paginationBtn">previous</button>
+                            <button class="previous_btn paginationBtn">Previous</button>
                             <span class="pageCount"></span>
                             <button class="Next_btn paginationBtn">Next</button>
                         </div>
