--- a/About.html
+++ b/About.html
@@ -146,7 +146,7 @@
 
                     <div class="card">
                         <div class="header_card">
-                            <h3>Streaming speed is slow or all videos do not play.</h3><span><svg
+                            <h3>Streaming speed is slow or all videos do not play</h3><span><svg
                                     xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
                                     class="bi bi-chevron-down" viewBox="0 0 16 16">
                                     <path class="about_arrow" fill-rule="evenodd"
@@ -162,7 +162,7 @@
                     </div>
                     <div class="card">
                         <div class="header_card">
-                            <h3> I want to download video.</h3><span><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                            <h3> I want to download video</h3><span><svg xmlns="http://www.w3.org/2000/svg" width="16"
                                     height="16" fill="white" class="bi bi-chevron-down" viewBox="0 0 16 16">
                                     <path class="about_arrow" fill-rule="evenodd"
                                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
