preloader added in moviedetails

--- a/movieDetail.html
+++ b/movieDetail.html
@@ -16,6 +16,22 @@
 </head>
 
 <body class="body">
+
+    <div class="preloader">
+        <div class="wrapper">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+            <span>Loading</span>
+        </div>
+
+
+    </div>
+
+
     <main class="main">
         <div class=" overlay overlay2"></div>
         <div class="overlay_side_navabar"></div>
