unreleased episode fixed

--- a/SeasonEpisode.html
+++ b/SeasonEpisode.html
@@ -2,23 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cinemaa</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="./resources/D moviesand tv show.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./resources/D moviesand tv show.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600;700&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body class="body">
     <main class="main">
-        <div class=" overlay overlay2"></div>
+        <div class="overlay overlay2"></div>
         <div class="overlay_side_navabar"></div>
         <div class="sidenav_container_movieDetail">
             <div class="sidenav_child_container">
@@ -86,45 +87,23 @@
                         <path class="pathh" fill-rule="evenodd"
                             d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
                     </svg>
-                    <input class="search" type="text" placeholder="Search ">
+                    <input class="search" type="text" placeholder="Search " />
                     <div class="light_darkmode"></div>
                 </nav>
             </div>
             <section class="section_two section_two2">
-
                 <section class="Now_playing_movies_container_search">
                     <h4 class="Now_playing_movies_container_title titleoftvshow"></h4>
                 </section>
                 <section class="msg_episode_container">
-                    <div class="msg_episode">If the episodes list are in random order. Click on the current season
-                        number twice</div>
+                    <!-- <div class="msg_episode">If the episodes list are in random order. Click on the current season
+                        number twice</div> -->
                 </section>
-                <section class="number_of_seasons">
-
-                </section>
+                <section class="number_of_seasons"></section>
                 <section class="currentseason_container">
                     <h4 class="Now_playing_movies_container_title current_season"></h4>
                 </section>
-                <section class="Episodes_container">
-                    <!-- <div class="epishodes_card"> 
-                        <a href=""><img class="episode_image"
-                                src="https://image.tmdb.org/t/p/original/83vFYTHtCqWwaDtZluSU8bmnFYG.jpg" alt="">
-                            <span class="runtime">61:00</span>
-                            <div class="playsvg_container">
-                                <img class="playsvg" src="./resources/play-circle-fill.svg" alt="">
-                            </div>
-                        </a>
-                        <div class="episode_detail">
-                            <h2 class="episode_title">1. The Name of the Game</h2>
-                            <p class="episode_description">When a Supe kills the love of his life, A/V salesman Hughie
-                                hi my name is dipu. I am from nepal, my planet name is earth an
-                                the solar system
-                                odsf
-                                life will never
-                                be the same again.</p>
-                        </div>
-                    </div>-->
-                </section>
+                <section class="Episodes_container"></section>
             </section>
         </section>
     </main>
