--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./resources/D moviesand tv show.png">
-    <title>Home | Cinemaa </title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./resources/D moviesand tv show.png" />
+    <title>Home | Cinemaa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
@@ -143,25 +143,10 @@
                         <path fill-rule="evenodd"
                             d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
                     </svg>
-                    <div class="Now_playing_movies_div">
-                        <!-- <div class="Now_playing_movies">
-                            <a href="./movieDetail.html"><img class="poster" src="./resources/movie poster.jpg" alt=""></a> 
-                            <p class="movie_title">Fantastic Beasts: The Secrets of Dumbledore</p>
-                            <div class="date_rating">
-                                <p class="date">2022</p><span class="dot dot2"></span>
-                                <p class="rating">6.9 <span><svg xmlns="http://www.w3.org/2000/svg" width="10"
-                                            height="10" fill="Yellow" class="star bi-star-fill" viewBox="0 0 16 16">
-                                            <path
-                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                                        </svg></span></p>
-                                <div class="category">Movie</div>
-                            </div>  -->
-                    </div>
+                    <div class="Now_playing_movies_div"></div>
                 </section>
                 <section class="Now_playing_movies_container" id="Trendingmovies">
-                    <h4 class="Now_playing_movies_container_title">
-                        Trending Movies
-                    </h4>
+                    <h4 class="Now_playing_movies_container_title">Trending Movies</h4>
 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
@@ -173,25 +158,10 @@
                         <path fill-rule="evenodd"
                             d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
                     </svg>
-                    <div class="current_popular_movies_div">
-                        <!-- <div class="current_popular_movies">
-                            <a href="./movieDetail.html"><img class="poster" src="./resources/movie poster.jpg" alt=""></a> 
-                            <p class="movie_title">Fantastic Beasts: The Secrets of Dumbledore</p>
-                            <div class="date_rating">
-                                <p class="date">2022</p><span class="dot dot2"></span>
-                                <p class="rating">6.9 <span><svg xmlns="http://www.w3.org/2000/svg" width="10"
-                                            height="10" fill="Yellow" class="star bi-star-fill" viewBox="0 0 16 16">
-                                            <path
-                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                                        </svg></span></p>
-                                <div class="category">Movie</div>
-                            </div>  -->
-                    </div>
+                    <div class="current_popular_movies_div"></div>
                 </section>
                 <section class="Now_playing_movies_container" id="toprated">
-                    <h4 class="Now_playing_movies_container_title">
-                        Top Rated Movies
-                    </h4>
+                    <h4 class="Now_playing_movies_container_title">Top Rated Movies</h4>
 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
@@ -203,20 +173,7 @@
                         <path fill-rule="evenodd"
                             d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
                     </svg>
-                    <div class="Top_rated_movies_div">
-                        <!-- <div class="current_popular_movies">
-                            <a href="./movieDetail.html"><img class="poster" src="./resources/movie poster.jpg" alt=""></a> 
-                            <p class="movie_title">Fantastic Beasts: The Secrets of Dumbledore</p>
-                            <div class="date_rating">
-                                <p class="date">2022</p><span class="dot dot2"></span>
-                                <p class="rating">6.9 <span><svg xmlns="http://www.w3.org/2000/svg" width="10"
-                                            height="10" fill="Yellow" class="star bi-star-fill" viewBox="0 0 16 16">
-                                            <path
-                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                                        </svg></span></p>
-                                <div class="category">Movie</div>
-                            </div>  -->
-                    </div>
+                    <div class="Top_rated_movies_div"></div>
                 </section>
             </section>
         </section>
