tailer and movies,  tv category added in person details

--- a/movieDetail.html
+++ b/movieDetail.html
@@ -116,6 +116,8 @@
                 </section>
                 <section class="section_story">
                 </section>
+                <section class="Trailer_section">
+                </section>
                 <section class=" Now_playing_movies_container Now_playing_movies_container_movieDetail" id="cast_con">
                     <h4 class="Now_playing_movies_container_title">Cast</h4>
 
