--- a/personDetail.html
+++ b/personDetail.html
@@ -114,7 +114,19 @@
                     <h3 class="pi_header">Birthday</h3>
                     <p class="DoB"></p>
                 </div>
-                <h3 class="pi_header">Filmography :</h3>
+                <h3 class="pi_header">Filmography : <span>
+                        <section>
+                            <div class="CategoriesContainer_div">
+                                <div class="CategoriesContainer">All Categories</div>
+                                <ul class="CategoriesContainer_ul">
+                                    <li class="categories_btn">All Categories</li>
+                                    <li class="categories_btn">Movies Only</li>
+                                    <li class="categories_btn">TV Only</li>
+                                </ul>
+                            </div>
+
+                        </section>
+                    </span></h3>
             </section>
         </section>
     </main>
