new design added for home page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600;700&display=swap"
         rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700;9..144,900&family=Pacifico&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -96,9 +99,38 @@
                 </nav>
             </div>
             <section class="section_two">
-                <h3 class="home_header">Home</h3>
+                <!-- <h3 class="home_header">Home</h3> -->
                 <div class="Home_header_container">
-                    <div class="first_box">
+
+                    <div class="trending_container">
+                        <div class="Trending_arrow_container">
+                            <?xml version="1.0" ?>
+                            <!DOCTYPE svg
+                                PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg
+                                class="trending_arrow trending_left_btn" height="512px" id="Layer_1"
+                                style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512"
+                                xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <polygon points="352,115.4 331.3,96 160,256 331.3,416 352,396.7 201.5,256 " />
+                            </svg>
+                            <?xml version="1.0" ?>
+                            <!DOCTYPE svg
+                                PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg
+                                class="trending_arrow trending_right_btn" height="512px" id="Layer_1"
+                                style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512"
+                                xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
+                            </svg>
+
+                        </div>
+                        <div class="trending_child"> </div>
+                        <div class="trending_child_2"> </div>
+                        <div class="trending_poster trending_div_container">
+
+                        </div>
+                    </div>
+                    <!-- <div class="first_box">
                         <h4 class="about">
                             Discover Movies and <br />
                             TV shows. Enjoy awesome <br />
@@ -126,9 +158,9 @@
                             our site to your <br />
                             friends.
                         </h4>
-                    </div>
+                    </div> -->
                 </div>
-                <section class="Now_playing_movies_container" id="nowplaying">
+                <section class="Now_playing_movies_container Now_playing_movies_container_trend" id="nowplaying">
                     <h4 class="Now_playing_movies_container_title">
                         Now Playing Movies
                     </h4>
