bug fixed if length of cast and recommend is 0

--- a/TvShowsDetails.html
+++ b/TvShowsDetails.html
@@ -103,7 +103,9 @@
                 </section>
                 <section class="Trailer_section">
                 </section>
-                <section class=" Now_playing_movies_container Now_playing_movies_container_movieDetail" id="cast_con">
+                <section
+                    class=" Now_playing_movies_container Now_playing_movies_container_movieDetail movie_caste_container "
+                    id="cast_con">
                     <h4 class="Now_playing_movies_container_title">Cast</h4>
 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
