--- a/index.html
+++ b/index.html
@@ -209,7 +209,12 @@
             </section>
         </section>
     </main>
+
     <script src="./scriptl.js"></script>
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+        data-id="immdipu" data-description="Support me on Buy me a coffee!"
+        data-message="Thank you for visiting. You can now buy me a coffee." data-color="#5F7FFF" data-position="Right"
+        data-x_margin="18" data-y_margin="18"></script>
 </body>
 
 </html>
